// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`main > getOptions A defaults 1`] = `
{
  "canFailStop": false,
  "canFix": false,
  "canForce": false,
  "logLevel": "7-error",
  "willInit": false,
  "willShowHelp": false,
  "willShowVersion": false,
}
`;

exports[`main > getOptions B non existing target 1`] = `
{
  "canFailStop": false,
  "canFix": true,
  "canForce": false,
  "logLevel": "7-error",
  "willInit": false,
  "willShowHelp": false,
  "willShowVersion": false,
}
`;

exports[`main > getOptions C show help 1`] = `
{
  "canFailStop": false,
  "canFix": false,
  "canForce": false,
  "logLevel": "7-error",
  "willInit": false,
  "willShowHelp": true,
  "willShowVersion": false,
}
`;
